# Ryugyong

./: .gitignore  .todo  README.md
Builder/: package-lock.json  package.json
Builder/public/: index.html  settings.json  style.css
Builder/public/javascript/: build.js  config.js  overlay.js  ui.js
Builder/public/js/: main-build.js  ui-notifs.js  ui-settings.js  ui-tag.js
Builder/server/: config.js  enums.js  index.js
Builder/server/routes/: get-commands.js  start-build.js  update-commands.js  update-config.js
Builder/server/tests/: crypto.js
Builder/server/utils/: common.js  crypto.js  format.js  regex.js  upload.js
Dev Scripts/: setup-everything.ps1  start-builder.ps1
Dropper/: Cargo.toml
Dropper/src/: config.rs  crypto.rs  download.rs  main.rs  utils.rs
Main/: Main.csproj  Main.sln
Main/Source/: Config.cs  Program.cs
Main/Source/Bot/: Command.cs  Manager.cs
Main/Source/Bot/Commands/: Audio.cs  BlueScreen.cs  Critical.cs  Debug.cs  Download.cs  File.cs  Input.cs  Messagebox.cs  Ping.cs  Rotate.cs  Screenshot.cs  Shell.cs  TextToSpeech.cs  Tree.cs  Upload.cs  Volume.cs  Wallpaper.cs  Webcam.cs  Wipe.cs
Main/Source/Functions/: Fingerprint.cs  Protection.cs  ScreenRotate.cs  Screenshot.cs
Main/Source/Functions/Persistence/: AutoRun.cs  ImpersonateLNKs.cs  RegistryStatus.cs  StartFolder.cs  TaskScheduler.cs  WinLogon.cs
Main/Source/Utilities/: Common.cs  Crypto.cs  Encryption.cs  Files.cs  Logger.cs  Parser.cs  Protection.cs  Shortcut.cs  Windows.cs
Main/Source/Utilities/Persistence/: AutoRun.cs  ImpersonateLNKs.cs  RegistryStatus.cs  (+2 more)
