[package]
name = "rust-app"
version = "2.2.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"

[dependencies]
chacha20poly1305 = "0.10"
base64 = "0.22"
sha2 = "0.10"
zip = "0.6"
reqwest = "0.11"

tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "process"
] }